--- a/collector/impl/pom.xml
+++ b/collector/impl/pom.xml
@@ -19,7 +19,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   </parent>
 
   <groupId>org.opendaylight.telemetry</groupId>
-  <artifactId>grpc-impl</artifactId>
+  <artifactId>collector-impl</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <!-- <name> formatting is used by autorelease to parse and notify projects on
        build failure. Please do not modify this unless you have a good reason. -->
@@ -73,7 +73,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>grpc-api</artifactId>
+      <artifactId>collector-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
