--- a/features/odl-telemetry-collector/pom.xml
+++ b/features/odl-telemetry-collector/pom.xml
@@ -18,7 +18,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     </parent>
 
     <groupId>org.opendaylight.telemetry</groupId>
-    <artifactId>odl-telemetry-grpc</artifactId>
+    <artifactId>odl-telemetry-collector</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>feature</packaging>
 
@@ -38,12 +38,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>grpc-api</artifactId>
+            <artifactId>collector-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>grpc-impl</artifactId>
+            <artifactId>collector-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
