--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     <module>collector</module>
     <module>configurator</module>
     <module>features</module>
+    <module>console</module>
     <module>karaf</module>
   </modules>
 
