--- a/features/odl-telemetry-all/pom.xml
+++ b/features/odl-telemetry-all/pom.xml
@@ -27,7 +27,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.telemetry</groupId>
-            <artifactId>odl-telemetry-grpc</artifactId>
+            <artifactId>odl-telemetry-collector</artifactId>
             <version>${project.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
