--- a/features/odl-telemetry-collector/pom.xml
+++ b/features/odl-telemetry-collector/pom.xml
@@ -38,12 +38,17 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>collector-api</artifactId>
+            <artifactId>collector-dataserver</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>collector-impl</artifactId>
+            <artifactId>collector-datastorage</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>console</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
