implement datastorage code
Change-Id: If2dc734615857dd6c2a59fcd4feb0f2223fb3c01
Signed-off-by: Ding Rui <ding.rui@zte.com.cn>

--- a/collector/dataserver/pom.xml
+++ b/collector/dataserver/pom.xml
@@ -233,7 +233,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
                       *
                   </Import-Package>
                   <Export-Package>
-                      org.opendaylight.telemetry.grpc.server.impl,
+                      org.opendaylight.telemetry.collector.dataserver,
                   </Export-Package>
                   <Embed-Dependency>
                       *;scope=compile|runtime;artifactId=!telemetry*|yang*|sal*|config*|guava;inline=true
