--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -16,25 +16,13 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   </parent>
 
   <groupId>org.opendaylight.telemetry</groupId>
-  <artifactId>telemetry-aggregator</artifactId>
+  <artifactId>simulator-aggregator</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <name>telemetry</name> <!-- DO NOT CHANGE - Used by Sonar to set project name -->
+  <name>ODL :: telemetry :: ${project.artifactId}</name> <!-- DO NOT CHANGE - Used by Sonar to set project name -->
   <packaging>pom</packaging>
 
-  <scm>
-    <connection>scm:git:ssh://git.opendaylight.org:29418/configurator.git</connection>
-    <developerConnection>scm:git:ssh://git.opendaylight.org:29418/configurator.git</developerConnection>
-    <tag>HEAD</tag>
-    <url>https://wiki.opendaylight.org/view/configurator:Main</url>
-  </scm>
-
   <modules>
-    <module>collector</module>
-    <module>configurator</module>
-    <module>simulator</module>
-    <module>features</module>
-    <module>console</module>
-    <module>karaf</module>
+    <module>dataclient</module>
   </modules>
 
   <!-- DO NOT install or deploy the repo root pom as it's only needed to initiate a build -->
