--- a/configurator/impl/pom.xml
+++ b/configurator/impl/pom.xml
@@ -14,7 +14,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>0.12.0-SNAPSHOT</version>
+    <version>0.13.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -26,20 +26,23 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <name>ODL :: telemetry :: ${project.artifactId}</name>
   <packaging>bundle</packaging>
 
-  <properties>
-    <netconf.connector.version>1.7.0-SNAPSHOT</netconf.connector.version>
-  </properties>
-
   <dependencyManagement>
-      <dependencies>
-          <dependency>
-              <groupId>org.opendaylight.controller</groupId>
-              <artifactId>mdsal-artifacts</artifactId>
-              <version>1.7.0-SNAPSHOT</version>
-              <type>pom</type>
-              <scope>import</scope>
-          </dependency>
-      </dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>mdsal-artifacts</artifactId>
+        <version>1.8.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.opendaylight.netconf</groupId>
+        <artifactId>netconf-artifacts</artifactId>
+        <version>1.5.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
 
   <dependencies>
@@ -57,7 +60,6 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <dependency>
       <groupId>org.opendaylight.netconf</groupId>
       <artifactId>sal-netconf-connector</artifactId>
-      <version>${netconf.connector.version}</version>
     </dependency>
 
     <!-- Testing Dependencies -->
