--- a/features/features-telemetry/pom.xml
+++ b/features/features-telemetry/pom.xml
@@ -6,14 +6,13 @@ This program and the accompanying materials are made available under the
 terms of the Eclipse Public License v1.0 which accompanies this distribution,
 and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>feature-repo-parent</artifactId>
-    <version>3.0.2</version>
+    <version>3.1.0</version>
     <relativePath/>
   </parent>
 
@@ -26,10 +25,6 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <name>ODL :: telemetry :: ${project.artifactId}</name>
 
   <properties>
-    <mdsal.model.version>0.12.0-SNAPSHOT</mdsal.model.version>
-    <mdsal.version>1.7.0-SNAPSHOT</mdsal.version>
-    <restconf.version>1.7.0-SNAPSHOT</restconf.version>
-    <yangtools.version>1.2.0</yangtools.version>
     <configfile.directory>etc/opendaylight/karaf</configfile.directory>
   </properties>
 
