change dependency controller to mdsal
Change-Id: I501601e183b79297dfa0c7fc2dc15e6d6f78a081
Signed-off-by: Wsx25289 <10200860@zte.com.cn>

--- a/features/odl-telemetry-configurator/pom.xml
+++ b/features/odl-telemetry-configurator/pom.xml
@@ -25,9 +25,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.opendaylight.controller</groupId>
+                <groupId>org.opendaylight.mdsal</groupId>
                 <artifactId>mdsal-artifacts</artifactId>
-                <version>1.8.1-SNAPSHOT</version>
+                <version>2.5.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -50,8 +50,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
 
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.controller</groupId>
-            <artifactId>odl-mdsal-broker</artifactId>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>odl-mdsal-dom-broker</artifactId>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
