Migrate controller mdsal
Change-Id: Ib3816b62f769e7829156a157ffa2dbc4edfc3394
Signed-off-by: Wsx25289 <10200860@zte.com.cn>

--- a/collector/datastorage/pom.xml
+++ b/collector/datastorage/pom.xml
@@ -30,9 +30,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.opendaylight.controller</groupId>
+        <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>mdsal-artifacts</artifactId>
-        <version>1.8.1-SNAPSHOT</version>
+        <version>2.5.1-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -48,8 +48,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
 
   <dependencies>
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
-      <artifactId>sal-binding-api</artifactId>
+      <groupId>org.opendaylight.mdsal</groupId>
+      <artifactId>mdsal-binding-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opendaylight.tsdr</groupId>
