--- a/collector/dataserver/pom.xml
+++ b/collector/dataserver/pom.xml
@@ -36,9 +36,9 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <dependencyManagement>
     <dependencies>
         <dependency>
-            <groupId>org.opendaylight.controller</groupId>
+            <groupId>org.opendaylight.mdsal</groupId>
             <artifactId>mdsal-artifacts</artifactId>
-            <version>1.8.1-SNAPSHOT</version>
+            <version>2.5.1-SNAPSHOT</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -72,8 +72,8 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
 
   <dependencies>
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
-      <artifactId>sal-binding-api</artifactId>
+      <groupId>org.opendaylight.mdsal</groupId>
+      <artifactId>mdsal-binding-api</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.protobuf</groupId>
