--- a/console/pom.xml
+++ b/console/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>0.13.1-SNAPSHOT</version>
+    <version>3.0.2</version>
     <relativePath/>
   </parent>
    
