set localFeature odl-telemetry-all for Integration Test
Change-Id: I5c2aba42fc4ebacf578afa71a76d00bb9da5dca1
Signed-off-by: Wsx25289 <10200860@zte.com.cn>

--- a/karaf/pom.xml
+++ b/karaf/pom.xml
@@ -24,7 +24,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
   <name>ODL :: telemetry :: ${project.artifactId}</name>
 
   <properties>
-    <!-- TODO <karaf.localFeature>odl-telemetry-all</karaf.localFeature> -->
+    <karaf.localFeature>odl-telemetry-all</karaf.localFeature>
   </properties>
 
   <dependencies>
