modify console of telemetry
Change-Id: I3f30009522620752b5c8b611c2f8f95c679f4cca
Signed-off-by: lijiansong <lijiansong@chinatelecom.cn>

--- a/features/odl-telemetry-test/pom.xml
+++ b/features/odl-telemetry-test/pom.xml
@@ -32,8 +32,10 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>simulator-dataclient</artifactId>
+            <artifactId>odl-telemetry-simulator</artifactId>
             <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
         </dependency>
     </dependencies>
 </project>
