--- a/console/pom.xml
+++ b/console/pom.xml
@@ -8,7 +8,7 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.opendaylight.mdsal</groupId>
@@ -16,7 +16,7 @@
     <version>3.0.2</version>
     <relativePath/>
   </parent>
-   
+
   <groupId>org.opendaylight.telemetry</groupId>
   <artifactId>console</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -24,7 +24,7 @@
        build failure. Please do not modify this unless you have a good reason. -->
   <name>ODL :: telemetry :: ${project.artifactId}</name>
   <packaging>bundle</packaging>
-    
+
   <dependencies>
     <dependency>
       <groupId>org.apache.karaf.shell</groupId>
@@ -39,9 +39,88 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>org.opendaylight.telemetry</groupId>
-        <artifactId>collector-dataserver</artifactId>
-        <version>${project.version}</version>
+      <groupId>org.opendaylight.telemetry</groupId>
+      <artifactId>collector-dataserver</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.telemetry</groupId>
+      <artifactId>simulator-dataclient</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
+  <build>
+    <extensions>
+      <extension>
+        <groupId>kr.motd.maven</groupId>
+        <artifactId>os-maven-plugin</artifactId>
+        <version>1.4.1.Final</version>
+      </extension>
+    </extensions>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+              <Import-Package>
+                  !autovalue.shaded.org.apache.commons.logging,
+                  !io.netty.internal.tcnative,
+                  !org.conscrypt,
+                  !com.google.protobuf.nano,
+                  !com.jcraft.jzlib,
+                  !com.ning.compress,
+                  !com.ning.compress.lzf,
+                  !com.ning.compress.lzf.util,
+                  !com.werken.xpath,
+                  !javax.servlet,
+                  !javax.servlet.http,
+                  !lzma.sdk,
+                  !lzma.sdk.lzma,
+                  !net.jpountz.lz4,
+                  !net.jpountz.xxhash,
+                  !org.apache.log,
+                  !org.apache.log.format,
+                  !org.apache.log.output.io,
+                  !org.apache.logging.log4j,
+                  !org.apache.oro.text.perl,
+                  !org.apache.tomcat,
+                  !org.apache.tomcat.jni,
+                  !org.apache.tools.ant,
+                  !org.apache.tools.ant.taskdefs,
+                  !org.bouncycastle.asn1.x500,
+                  !org.bouncycastle.cert,
+                  !org.bouncycastle.cert.jcajce,
+                  !org.bouncycastle.jce.provider,
+                  !org.bouncycastle.operator,
+                  !org.bouncycastle.operator.jcajce,
+                  !org.eclipse.jetty.alpn,
+                  !org.eclipse.jetty.npn,
+                  !org.jboss.marshalling,
+                  !org.jdom,
+                  !org.jdom.input,
+                  !org.jdom.output,
+                  !org.joda.convert,
+                  !sun.security.util,
+                  !sun.security.x509,
+                  !com.google.protobuf,
+                  !com.google.protobuf.util,
+                  !com.sun.jna,
+                  !com.sun.jna.ptr,
+                  !com.sun.jna.win32,
+                  !org.mozilla.universalchardet,
+                  !org.opendaylight.telemetry.simulator.dataclient.client,
+                  *
+              </Import-Package>
+            <Export-Package>
+              org.opendaylight.telemetry.console,
+            </Export-Package>
+
+            <Embed-Transitive>true</Embed-Transitive>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
