--- a/features/features-telemetry/pom.xml
+++ b/features/features-telemetry/pom.xml
@@ -43,15 +43,13 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
       <type>xml</type>
       <classifier>features</classifier>
     </dependency>
-<!--
-    <dependency>
+<!--    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>odl-telemetry-test</artifactId>
       <version>${project.version}</version>
       <type>xml</type>
       <classifier>features</classifier>
-    </dependency>
--->
+    </dependency>-->
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>odl-telemetry-all</artifactId>
