add command of query telemetry data.
Change-Id: Ib2cdb9859bfbceab317727b12feac1b1ad280275
Signed-off-by: lijiansong77 <lijiansong@chinatelecom.cn>

--- a/console/pom.xml
+++ b/console/pom.xml
@@ -43,6 +43,11 @@
       <artifactId>collector-dataserver</artifactId>
       <version>${project.version}</version>
     </dependency>
+      <dependency>
+          <groupId>org.opendaylight.telemetry</groupId>
+          <artifactId>collector-datastorage</artifactId>
+          <version>${project.version}</version>
+      </dependency>
     <dependency>
       <groupId>org.opendaylight.telemetry</groupId>
       <artifactId>simulator-dataclient</artifactId>
